--- a/src/pages/popup/index.less
+++ b/src/pages/popup/index.less
@@ -68,12 +68,15 @@ body {
       .semi-card-meta-avatar {
         margin-right: 0;
       }
+      .semi-avatar-grey {
+        background-color: #fff;
+      }
       .semi-avatar > img {
         width: 55%;
         height: 55%;
       }
       .semi-card-meta-wrapper {
-        width: 80%;
+        width: 70%;
       }
       .semi-card-meta-wrapper-title {
         font-size: 14px;
@@ -110,5 +113,4 @@ body {
   font-size: 12px;
   color: rgb(237, 127, 127);
   margin-top: 4px;
-  
 }
