去掉滚动条

--- a/src/pages/popup/index.less
+++ b/src/pages/popup/index.less
@@ -97,7 +97,11 @@ body {
     width: 90% !important;
   }
 }
-
+.semi-modal-wrap {
+  &::-webkit-scrollbar {
+    display: none; /* Chrome Safari */
+}
+}
 .semi-backtop {
   right: 0px;
 }
